--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,6 @@
 margin:0px;
 padding:0px;
 width: 100%!important;
-margin-top:-1%;
 overflow: auto; 
 height: 100%; 
 }
@@ -30,10 +29,13 @@ height: 100%;
 	vertical-align: middle;
 	
 }
-
+.transparent{
+float:left;
+width:100%;
+}
 header{
-	height:43px;
-	background: #39422db3;
+	height:53px;
+	border: 3px solid #39422db3;
 	position:relative;
 	z-index:0;
 	width:100%;
@@ -360,13 +362,13 @@ line-height: 27px;
 	 font-size: 4em;
 	 font-family: "Pacifico", sans-serif;
 	 text-align: center;
-	 padding-top: 13%;
+	 padding-top: 7%;
 	 transform: translateY(-100%) scale(0.8);
 }
  .caption::after {
 	 content: attr(data-description) " ...";
 	 background: rgba(204, 204, 204, 0.7);
-	 top: 50%;
+	 top: 43%;
 	 padding: 20px;
 	 font-size: 1.4em;
 	 transform: translateY(100%) scale(0.8);
